Implementação do controller e service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/XXX
-spring.datasource.username=XXX
-spring.datasource.password=XXX
+spring.datasource.url=jdbc:postgresql://localhost:5432/editarmeudados
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
